fixed default panewrap position.

--- a/css/app.css
+++ b/css/app.css
@@ -309,7 +309,7 @@ form.hide {
     position:absolute;
     width:200%;
     height:100%;
-    right: 0%;
+    right: -100%;
 }
 
 .pane {
